[gd_scene load_steps=8 format=3 uid="uid://b0hbansyrqpso"]

[ext_resource type="Script" uid="uid://o07chch86ppx" path="res://game_scenes/dice_screen/dice_popup.gd" id="1_b010v"]
[ext_resource type="Texture2D" uid="uid://lgl6156cilrx" path="res://game_scenes/dice_screen/UnderwaterDiceScene.png" id="2_acm4x"]
[ext_resource type="Texture2D" uid="uid://xjyxv5rhk75d" path="res://game_scenes/dice_screen/Cup.png" id="3_1t5kw"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="3_tjbuc"]

[sub_resource type="Animation" id="Animation_0rb3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CupSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CupSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tjbuc"]
resource_name = "cup_reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CupSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(3, 0), Vector2(-3, 0), Vector2(0, -5), Vector2(0, -15), Vector2(-10, -22.5), Vector2(-25, -30), Vector2(-40, -40), Vector2(-55, -50), Vector2(-70, -65), Vector2(-85, -80), Vector2(-100, -100), Vector2(-115, -120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CupSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CupSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.326377]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dq7c0"]
_data = {
&"RESET": SubResource("Animation_0rb3b"),
&"cup_reveal": SubResource("Animation_tjbuc")
}

[node name="dice_popup" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_b010v")

[node name="FullScreenBackground" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="BackgroundSprite" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_acm4x")
expand_mode = 1
stretch_mode = 6

[node name="DialogPanel" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -457.0
offset_top = -324.0
offset_right = 452.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="DialogPanel/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 24
text = "üé≤ Attack Resolution - Dice Roll"

[node name="Spacer" type="Control" parent="DialogPanel/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdminButton" type="Button" parent="DialogPanel/HeaderContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 14
text = "Exit ND"

[node name="CloseButton" type="Button" parent="DialogPanel/HeaderContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 18
text = "‚úï"

[node name="InfoContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 30.0
offset_top = 75.0
offset_right = -30.0
offset_bottom = 225.0
grow_horizontal = 2

[node name="AttackInfo" type="RichTextLabel" parent="DialogPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_tjbuc")
theme_override_fonts/mono_font = ExtResource("3_tjbuc")
theme_override_fonts/italics_font = ExtResource("3_tjbuc")
theme_override_fonts/bold_italics_font = ExtResource("3_tjbuc")
theme_override_fonts/bold_font = ExtResource("3_tjbuc")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[b]Current Attack:[/b]
Loading attack information..."

[node name="DefenseInfo" type="RichTextLabel" parent="DialogPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_tjbuc")
theme_override_fonts/mono_font = ExtResource("3_tjbuc")
theme_override_fonts/italics_font = ExtResource("3_tjbuc")
theme_override_fonts/bold_italics_font = ExtResource("3_tjbuc")
theme_override_fonts/bold_font = ExtResource("3_tjbuc")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[b]Active Defenses:[/b]
Loading defense information..."

[node name="DiceContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -81.5
offset_right = 327.0
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2

[node name="DiceArea" type="Control" parent="DialogPanel/DiceContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2

[node name="DiceSprite" type="Sprite2D" parent="DialogPanel/DiceContainer/DiceArea"]
z_index = 1
position = Vector2(200, 75)
scale = Vector2(4, 4)
offset = Vector2(40, 0)

[node name="NumberLabel" type="Label" parent="DialogPanel/DiceContainer/DiceArea/DiceSprite"]
z_index = 2
anchors_preset = -1
anchor_left = 20.1
anchor_top = -3.625
anchor_right = 67.125
anchor_bottom = -3.625
offset_left = -0.475
offset_top = -13.0
offset_right = -19.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 28
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CupSprite" type="Sprite2D" parent="DialogPanel/DiceContainer/DiceArea"]
z_index = 3
scale = Vector2(4, 4)
texture = ExtResource("3_1t5kw")
offset = Vector2(80, 25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogPanel/DiceContainer/DiceArea"]
libraries = {
&"": SubResource("AnimationLibrary_dq7c0")
}

[node name="DiceResult" type="Label" parent="DialogPanel/DiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 18
text = "Ready to roll the dice..."
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel/DiceContainer"]
layout_mode = 2
alignment = 1

[node name="RollButton" type="Button" parent="DialogPanel/DiceContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 16
text = "üé≤ Roll Dice (3 Remaining)"

[node name="ManualToggle" type="Button" parent="DialogPanel/DiceContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 16
text = "‚úèÔ∏è Manual Entry"

[node name="ManualContainer" type="VBoxContainer" parent="DialogPanel/DiceContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Spacer1" type="Control" parent="DialogPanel/DiceContainer/ManualContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ManualLabel" type="Label" parent="DialogPanel/DiceContainer/ManualContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 16
text = "Enter roll result (1-10):"
horizontal_alignment = 1

[node name="ManualEntryContainer" type="HBoxContainer" parent="DialogPanel/DiceContainer/ManualContainer"]
layout_mode = 2
alignment = 1

[node name="ManualEntry" type="SpinBox" parent="DialogPanel/DiceContainer/ManualContainer/ManualEntryContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
alignment = 1

[node name="ManualButtonContainer" type="HBoxContainer" parent="DialogPanel/DiceContainer/ManualContainer"]
layout_mode = 2
alignment = 1

[node name="ManualSubmit" type="Button" parent="DialogPanel/DiceContainer/ManualContainer/ManualButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 16
text = "Submit Manual Roll"

[node name="Spacer2" type="Control" parent="DialogPanel/DiceContainer/ManualContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StrengthContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -120.0
offset_right = -50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StrengthInfo" type="Label" parent="DialogPanel/StrengthContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tjbuc")
theme_override_font_sizes/font_size = 18
text = "Success Rate: 50% | Roll 5 or lower to succeed"
horizontal_alignment = 1

[node name="StrengthBar" type="ColorRect" parent="DialogPanel/StrengthContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="RedSection" type="ColorRect" parent="DialogPanel/StrengthContainer/StrengthBar"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 40.0
color = Color(0.8, 0.2, 0.2, 0.9)

[node name="BlueSection" type="ColorRect" parent="DialogPanel/StrengthContainer/StrengthBar"]
layout_mode = 0
offset_left = 250.0
offset_right = 500.0
offset_bottom = 40.0
color = Color(0.2, 0.2, 0.8, 0.9)

[node name="ResultIndicator" type="ColorRect" parent="DialogPanel/StrengthContainer/StrengthBar"]
layout_mode = 0
offset_left = 248.0
offset_right = 252.0
offset_bottom = 40.0
